<resources>
    <string name="app_name">Jamz</string>

    <string name="facebook_app_id">2352158468402077</string>
    <string name="fb_login_protocol_scheme">fb2352158468402077</string>
    <string name="default_web_client_id">243173272705-5stt21uq237ehel56bka7mc3q6gqkpmh.apps.googleusercontent.com</string>

    <!--Add by Lunhao on 16 April -->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBEjPfwZEYB3XHyglA3fdRML_HbhPt-q3g</string>

    <!-- Chat -->
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <!-- Navigator -->
    <string name="title_create_jam">Create a JAM</string>
    <string name="title_chat">Chat</string>
    <string name="title_discover">Discover</string>
    <string name="title_friends">Friends</string>
    <string name="title_profile">Profile</string>

    <!-- Spotify -->
    <string name="com_spotify_sdk_redirect_scheme" translatable="false">jamzapp</string>
    <string name="com_spotify_sdk_redirect_host" translatable="false">jamzcallback</string>

    <string name="warning_need_token" translatable="false">You need to request an access token first</string>
    <string name="code" translatable="false">Code: %1$s</string>
    <string name="token" translatable="false">Access Token: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="server_client_id">243173272705-aar5mjihcm12carlscuga8mjh1fbfjbl.apps.googleusercontent.com</string>
    <string name="title_events">Events</string>
    <string name="settings">Settings</string>

    <!-- add event-->
    <string name="event_name">Event Name</string>
    <string name="event_description">Sample description for the Jam event. For example a mini concert.</string>
    <string name="event_location">Location</string>
    <string name="event_from">From</string>
    <string name="event_to">to</string>
    <string name="event_thu_126">Thu 1 26</string>
    <string name="event_fri_512">Fri 5 12 2017</string>
    <string name="event_all_day">All day</string>
    <string name="event_ADD">ADD</string>

    <!-- chat-->
    <string name="chat_send">SEND</string>

    <!--details-->
    <string name="details_android_name">Android Name</string>
    <string name="details_download">Download This Video</string>
    <string name="details_favorite">Favorite</string>
    <string name="details_comment">Comment</string>

    <!--event details-->
    <string name="event_detail_event_name">Event name</string>
    <string name="event_detail_event_description">Event description</string>
    <string name="event_detail_location">Location</string>
    <string name="event_detail_date">Date</string>
    <string name="event_detail_time">Time</string>
    <string name="event_detail_event_chat">Event Chat</string>

    <!--profile-->
    <string name="profile_music">My Music</string>
    <string name="profile_Recent">Recent Listen</string>
    <string name="profile_videos">Videos</string>

    <!--upload music-->
    <string name="upload_music_name">Audio Name</string>
    <string name="upload_music_choose">Choose</string>
    <string name="upload_music_upload">upload</string>
    <string name="upload_music_back">back to main menu</string>

    <!--creat jam-->
    <string name="creat_jam_name">Event Name</string>
    <string name="creat_jam_description">Event Description</string>
    <string name="creat_jam_location">Location</string>
    <string name="creat_jam_date">Date</string>
    <string name="creat_jam_time">Time</string>
    <string name="creat_jam_create">Create Jam</string>

    <!--discover-->
    <string name="discover">Discover Here</string>

    <!--settings friends-->
    <string name="settings_friend">Here is the settings page</string>

    <!--music list-->
    <string name="music_list">Click to Upload</string>

    <!--profile-->
    <string name="profile_profile">Profile</string>

    <!--settings-->
    <string name="setting_name">Enter Name</string>
    <string name="setting_instrument">Instrument(s):</string>
    <string name="setting_Bass">Bass</string>
    <string name="setting_Drum">Drum</string>
    <string name="setting_Flute">Flute</string>
    <string name="setting_Guitar1">Guitar(Acoustic)</string>
    <string name="setting_Guitar2">Guitar(Electric)</string>
    <string name="setting_Piano">Piano</string>
    <string name="setting_sax">Saxophone</string>
    <string name="setting_violin">Violin</string>
    <string name="setting_voice">Voice(Singer)</string>
    <string name="setting_bio">User bio</string>
    <string name="setting_tell">Tell everyone about yourself</string>
    <string name="setting_save">Save</string>
    <string name="setting_change">Change Display Name</string>

    <!--user profile-->
    <string name="user_profile_user">Username</string>
    <string name="user_profile_yt">Youtube</string>
    <string name="user_profile_bio">User Bio</string>
    <string name="user_profile_ins">Instrument</string>
    <string name="user_profile_spotbutton">Spotify Top Listens</string>

    <!--image item-->
    <string name="image_item">Image name</string>

    <!--include post-->
    <string name="include_post_fp">My First Post</string>
    <string name="include_post_pa">Post Address</string>

    <!--item user-->
    <string name="item_user_name">Username</string>

    <!--header-->
    <string name="header">My list</string>

    <!--show video-->
    <string name="show_video_play">play</string>
    <string name="show_video_pause">pause</string>

    <!--yt-->
    <string name="yt_p">video Published at</string>

    <!--spotify personalization-->
    <string name="spotify_p">Get Users Top Tracks from Spotify</string>

    <!--event list-->
    <string name="eventlist_reco">Recommended</string>
    <string name="eventlist_jamz">Jamz</string>

    <!--top track-->
    <string name="tc">Top Tracks</string>


</resources>
