<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_create_jam"
        android:icon="@drawable/ic_create_jam_black_24dp"
        android:title="@string/title_create_jam" />

    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/ic_discover_black_24dp"
        android:title="@string/title_discover" />

    <item
        android:id="@+id/navigation_eventlist"
        android:icon="@drawable/ic_event_24"
        android:title="@string/title_events" />

    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/ic_friends_black_24dp"
        android:title="@string/title_friends" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/title_profile" />

</menu>
