<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userProfFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="162dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profImageView"
                android:layout_width="106dp"
                android:layout_height="103dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp" />

            <TextView
                android:id="@+id/txtUserProf"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:text="@string/user_profile_user"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/youtube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/user_profile_yt" />

            <ImageButton
                android:id="@+id/messageImgBtn"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                card_view:srcCompat="@drawable/ic_baseline_message_24px" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtUserBio"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_gravity="center"
                android:text="@string/user_profile_bio" />

            <TextView
                android:id="@+id/txtInstrument"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_gravity="center"
                android:text="@string/user_profile_ins" />
        </LinearLayout>

    </LinearLayout>


</FrameLayout>
